--- a/index.html
+++ b/index.html
@@ -239,10 +239,10 @@
                     <select id="maquina_bobinagem" name="maquina_bobinagem">
                         <option value="">Selecione a máquina...</option>
                         <option value="01 - Bobinadora 100 cm Azul">01 - Bobinadora 100 cm Azul</option>
-                        <option value="02 - Bobinadora 100 cm Amarela - ( Rafael Miranda )">02 - Bobinadora 100 cm Amarela - ( Rafael Miranda )</option>
+                        <option value="02 - Bobinadora 100 cm Amarela - ( Rafael Miranda )">02 - Bobinadora 100 cm Amarela</option>
                         <option value="03 - Bobinadora 80 cm">03 - Bobinadora 80 cm</option>
                         <option value="04 - Bob./Triângulo 185 cm">04 - Bob./Triângulo 185 cm</option>
-                        <option value="05 - Bobinadora 160 cm Titan">05 - Bobinadora 160 cm Titan</option>
+                        <option value="05 - Bobinadora 160 cm Titan">05 - Bobinadora 160 cm Titan - ( Diogo Loureiro )</option>
                         <option value="07 - Bielloni Tea 120">07 - Bielloni Tea 120</option>
                         <option value="-- - Enfardadeira">-- - Enfardadeira</option>
                     </select>
