--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                         <option value="">Selecione a máquina...</option>
                         <option value="01 - SCAE 100 - ( Francisco Costa )">01 - SCAE 100 - ( Francisco Costa )</option>
                         <option value="02 - Indemo 50">02 - Indemo 50</option>
-                        <option value="03 - Polimac 60">03 - Polimac 60</option>
+                        <option value="03 - Polimac 60 - ( Marco Gomes )">03 - Polimac 60 - ( Marco Gomes )</option>
                         <option value="04 - Polimac 80 - ( José Lamela )">04 - Polimac 80 - ( José Lamela )</option>
                         <option value="05 - Indemo 80 - ( Pedro Cortez)">05 - Indemo 80 - ( Pedro Cortez)</option>
                         <option value="06 - Polimac 85 - (Bobine)">06 - Polimac 85 - (Bobine)</option>
