--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
             <label for="acao">Ação Realizada:</label>
             <textarea id="acao" name="acao" required></textarea><br>
 
-            <button type="submit">Registrar Manutenção</button>
+            <button type="submit">Registar Manutenção</button>
         </form>
 
         <table id="tabela-registros">
@@ -271,10 +271,10 @@
             <tbody></tbody>
         </table>
 
-        <button id="limparRegistros" class="delete-btn">Limpar Registros</button>
+        <button id="limparRegistros" class="delete-btn">Limpar Registos</button>
 
         <form id="senhaForm" style="display: none;">
-            <label for="senha">Digite a senha para limpar os registros:</label>
+            <label for="senha">Digite a senha para limpar os registos:</label>
             <input type="password" id="senha" name="senha" required>
             <button type="submit">Confirmar</button>
         </form>
