2025 Fev index.html

--- a/index.html
+++ b/index.html
@@ -202,48 +202,47 @@
                     <label for="maquina_impressoras">Impressão:</label>
                     <select id="maquina_impressoras" name="maquina_impressoras">
                         <option value="">Selecione a máquina...</option>
-                        <option value="01 - Megraf 60 - ( Manuel Silva )">01 - Megraf 60 - ( Manuel Silva )</option>
-                        <option value="02 - Indemo 60 - ( Bruno Andrade )">02 - Indemo 60 - ( Bruno Andrade )</option>
-                        <option value="03 - Chinesa 75 - ( Carlos Silva )">03 - Chinesa 75 - ( Carlos Silva )</option>
-                        <option value="04 - Megraf 80 -  ( Bruno Andrade )">04 - Megraf 80 -  ( Bruno Andrade )</option>
-                        <option value="05 - Salplast 100 - ( Hélder ferreira )">05 - Salplast 100 - ( Hélder ferreira )</option>
-                        <option value="06 - Manzoni 100 - ( Carlos silva )">06 - Manzoni 100 - ( Carlos silva )</option>
-                        <option value="07 - Bielloni 120 - ( Carlos Silva )">07 - Bielloni 120 - ( Carlos Silva )</option>
+                        <option value="Imp.01 - Megraf 60 - ( Manuel Silva )">Imp.01 - Megraf 60 - ( Manuel Silva )</option>
+                        <option value="Imp.02 - Indemo 60 - ( Bruno Andrade )">Imp.02 - Indemo 60 - ( Bruno Andrade )</option>
+                        <option value="Imp.03 - Chinesa 75 - ( Carlos Silva )">Imp.03 - Chinesa 75 - ( Carlos Silva )</option>
+                        <option value="Imp.04 - Megraf 80 -  ( Bruno Andrade )">Imp.04 - Megraf 80 -  ( Bruno Andrade )</option>
+                        <option value="Imp.05 - Salplast 100 - ( Hélder ferreira )">Imp.05 - Salplast 100 - ( Hélder ferreira )</option>
+                        <option value="Imp.06 - Manzoni 100 - ( Carlos silva )">Imp.06 - Manzoni 100 - ( Carlos silva )</option>
+                        <option value="Imp.07 - Bielloni 120 - ( Carlos Silva )">Imp.07 - Bielloni 120 - ( Carlos Silva )</option>
                     </select>
                 </div>
+
 
                 <div>
                     <label for="maquina_corte">Corte:</label>
                     <select id="maquina_corte" name="maquina_corte">
                         <option value="">Selecione a máquina...</option>
-                        <option value="01 - SCAE 100 - ( Francisco Costa )">01 - SCAE 100 - ( Francisco Costa )</option>
-                        <option value="02 - Indemo 50">02 - Indemo 50</option>
-                        <option value="03 - Polimac 60 - ( Marco Gomes )">03 - Polimac 60 - ( Marco Gomes )</option>
-                        <option value="04 - Polimac 80 - ( José Lamela )">04 - Polimac 80 - ( José Lamela )</option>
-                        <option value="05 - Indemo 80 - ( Pedro Cortez)">05 - Indemo 80 - ( Pedro Cortez)</option>
-                        <option value="06 - Polimac 85 - (Bobine)">06 - Polimac 85 - (Bobine)</option>
-                        <option value="07 - Chinesa 90">07 - Chinesa 90</option>
-                        <option value="08 - Polimac 85 - (Coex) - ( Tiago Ferreira )">08 - Polimac 85 - (Coex) - ( Tiago Ferreira )</option>
-                        <option value="09 - Polimac 85 - (Solda Fundo)">09 - Polimac 85 - (Solda Fundo)</option>
-                        <option value="10 - Polimac 85">10 - Polimac 85</option>
-                        <option value="11 - Gur-Is 85 (Fecho Zip) - ( Joel Araújo )">11 - Gur-Is 85 (Fecho Zip) - ( Joel Araújo )</option>
-                        <option value="12 - PAL 750 (Zip e Cursor) - ( Tiago Silva )">12 - PAL 750 (Zip e Cursor) - ( Tiago Silva )</option>
-                        <option value="13 - Mamata Vega 750 Plus - ( Nélson Silva )">13 - Mamata Vega 750 Plus - ( Nélson Silva )</option>
-                        <option value="14 - Gur-Is TY-900 CR (Coex) - ( Tiago Ferreira )">14 - Gur-Is TY-900 CR (Coex) - ( Tiago Ferreira )</option>
-                        <option value="15 - SCAE 100 Reforço - (Joel)">15 - SCAE 100 Reforço - (Joel)</option>
+                        <option value="Crt.01 - PAL 750 (Zip/Cursor) - ( Tiago Silva )">Crt.01 - PAL 750 (Zip/Cursor) - ( Tiago Silva )</option>
+                        <option value="Crt.02 - Gur-Is 85 (Zip) - ( Joel Araújo )">Crt.02 - Gur-Is 85 (Zip) - ( Joel Araújo )</option>
+                        <option value="Crt.03 - Gur-Is TY-900 CR (Coex) - ( Tiago Ferreira )">Crt.03 - Gur-Is TY-900 CR (Coex) - ( Tiago Ferreira )</option>
+                        <option value="Crt.04 - Polimac 85 - (Coex) - (?)">Crt.04 - Polimac 85 - (Coex) - (?)</option>
+                        <option value="Crt.05 - Polimac 60 - ( Marco Gomes )">Crt.05 - Polimac 60 - ( Marco Gomes )</option>
+                        <option value="Crt.06 - SCAE 100 Reforço - (Joel)">Crt.06 - SCAE 100 Reforço - (Joel)</option>
+                        <option value="Crt.07 - SCAE 100 - ( Francisco Costa )">Crt.07 - SCAE 100 - ( Francisco Costa )</option>
+                        <option value="Crt.08 - Mamata Vega 750 Plus - ( Nélson Silva )">Crt.08 - Mamata Vega 750 Plus - ( Nélson Silva )</option>
+                        <option value="Crt.09 - Indemo 80 - ( Pedro Cortez)">Crt.09 - Indemo 80 - ( Pedro Cortez)</option>
+                        <option value="Crt.10 - Polimac 80 - ( José Lamela )">Crt.10 - Polimac 80 - ( José Lamela )</option>
+                        <option value="Crt.11 - Polimac 85">Crt.11 - Polimac 85</option>
+                        <option value="Crt.12 - Polimac 85 - (Solda Fundo)">Crt.12 - Polimac 85 - (Solda Fundo)</option>
+                        <option value="Crt.13 - Indemo 50">Crt.13 - Indemo 50</option>
                     </select>
                 </div>
-
                 <div>
                     <label for="maquina_bobinagem">Bobinagem / Outros:</label>
                     <select id="maquina_bobinagem" name="maquina_bobinagem">
                         <option value="">Selecione a máquina...</option>
-                        <option value="01 - Bobinadora 100 cm Azul">01 - Bobinadora 100 cm Azul</option>
-                        <option value="02 - Bobinadora 100 cm Amarela - ( Rafael Miranda )">02 - Bobinadora 100 cm Amarela</option>
-                        <option value="03 - Bobinadora 80 cm">03 - Bobinadora 80 cm</option>
-                        <option value="04 - Bob./Triângulo 185 cm">04 - Bob./Triângulo 185 cm</option>
-                        <option value="05 - Bobinadora 160 cm Titan">05 - Bobinadora 160 cm Titan - ( Diogo Loureiro )</option>
-                        <option value="07 - Bielloni Tea 120">07 - Bielloni Tea 120</option>
+                        <option value="Bob.01 - Bobinadora 100 cm Azul">01 - Bobinadora 100 cm Azul</option>
+                        <option value="Bob.02 - Bobinadora 100 cm Amarela">02 - Bobinadora 100 cm Amarela</option>
+                        <option value="Bob.03 - Bobinadora 80 cm">03 - Bobinadora 80 cm</option>
+                        <option value="Bob.04 - Bob./Triângulo 185 cm">04 - Bob./Triângulo 185 cm</option>
+                        <option value="Bob.05 - Bobinadora 160 cm Titan">05 - Bobinadora 160 cm Titan - ( Diogo Loureiro )</option>
+                        <option value="Bob.06 - Polimac 85 (BOBINES)">Bob.06 - Polimac 85 (BOBINES) - ( Ivan Lysyy )</option>
+                        <option value="Bob.07 - Bielloni Tea 120">07 - Bielloni Tea 120</option>
                         <option value="-- - Enfardadeira">-- - Enfardadeira</option>
                     </select>
                 </div>
